--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/i18n": "^10.2.1",
     "@tailwindcss/vite": "^4.1.18",
+    "nodemailer": "^7.0.12",
     "nuxt": "^4.2.2",
     "nuxt-icon": "^1.0.0-beta.7",
     "tailwindcss": "^4.1.18",
