--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@
 # 4. Create a new App Password for "Mail" and "Other (Custom name)"
 # 5. Use the generated 16-character password below
 MAIL_USER=devhub.homedev@gmail.com
-MAIL_PASSWORD=wwfeiapoaiyasgug
+MAIL_PASSWORD=
