--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/i18n": "^10.2.1",
     "@tailwindcss/vite": "^4.1.18",
+    "@vercel/analytics": "^1.6.1",
     "nodemailer": "^7.0.12",
     "nuxt": "^4.2.2",
     "nuxt-icon": "^1.0.0-beta.7",
