--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@nuxt/fonts": "^0.14.0",
     "@nuxt/image": "^2.0.0",
     "@nuxtjs/i18n": "^10.2.1",
     "@tailwindcss/vite": "^4.1.18",
     "@vercel/analytics": "^1.6.1",
-    "nodemailer": "^7.0.12",
     "nuxt": "^4.2.2",
     "nuxt-icon": "^1.0.0-beta.7",
     "tailwindcss": "^4.1.18",
